--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!-- templates/home.html -->
-<h1>Message board homepage</h1>
+<h1>Message board homepage AAAAA</h1>
 <ul>
   {% for post in post_list %}
     <li>{{ post.text }}</li>
